# Zettel-hs

./: LICENSE  PopNVR.fish  README.md  Zettel.cabal  stack.yaml  tantivy_meta.json  zettel.vim
app/: Main.hs
src/: Elucidations.hs  Operations.hs  Parser.hs  Prelude.hs  Visualization.hs  Zettel.hs  ZettelKasten.hs
src/Meta/: History.hs  Linkage.hs
