name:                Zettel
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Zettel#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
      ZettelKasten
     , Prelude
     , Parser
     , Operations
     , Elucidations
     , Visualization
     , Meta.History
     , Meta.Linkage
     , Zettel
  hs-source-dirs:
      src
  extensions: OverloadedStrings
  ghc-options: -fwarn-unused-imports -Werror=incomplete-patterns -Wall -fno-warn-name-shadowing
  build-depends:
      base-noprelude >=4.7 && <5
    , flow
    , unordered-containers
    , typed-process
    , bytestring
    , uuid
    , containers
    , random
    , text
    , directory
    , time
    , relude
    , megaparsec
    , aeson
    , path-io
    , path
    , cryptohash-sha256
    , sqlite-simple
  default-language: Haskell2010

executable Zettel
  hs-source-dirs:      app
  main-is:             Main.hs
  extra-source-files:  tantivy_meta.json
  ghc-options: -fwarn-unused-imports -Werror=incomplete-patterns -Wall -fno-warn-name-shadowing
  extensions: OverloadedStrings
  default-language:    Haskell2010
  build-depends:       base-noprelude >= 4.7 && < 5
                     , Zettel
                     , flow
                     , path
                     , path-io
                     , file-embed
                     , bytestring
                     , text
                     , bytestring
                     , directory
                     , containers
                     , unordered-containers
                     , relude
                     , typed-process
                     , optparse-applicative
                     , aeson
                     , case-insensitive
                     , sampling
                     , cryptohash-sha256
                     , time
                     , sqlite-simple

